5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4466/executions/1753_1530.log
== SUBMITION (2019-05-16 18:37:00) 
-- CODE:
q1 = int(input("quantidade inicial de pergaminhos:"))
q2 = int(input("quantidade inicial de varinhas:"))
p1 = float(input("percentual 1:"))
p2 = float(input("percentual 2:"))

cont = 0

while(q1 + q2 < 80000):
	 q1 = q1 + (q1 * p1/100)
		q2 = q2 + (q2 * p2/100)
		cont = cont + 1
print(cont)
     
-- EXECUTION TIME:
0.2199
-- ERROR:
  File "/home/codebench/codes/1753/1530/main.py", line 10
    q2 = q2 + (q2 * p2/100)
                          ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:02) 
-- CODE:
q1 = int(input("quantidade inicial de pergaminhos:"))
q2 = int(input("quantidade inicial de varinhas:"))
p1 = float(input("percentual 1:"))
p2 = float(input("percentual 2:"))

cont = 0

while(q1 + q2 < 80000):
	 q1 = q1 + (q1 * p1/100)
		q2 = q2 + (q2 * p2/100)
		cont = cont + 1
print(cont)
     
-- EXECUTION TIME:
0.263433
-- ERROR:
  File "/home/codebench/codes/1753/1530/main.py", line 10
    q2 = q2 + (q2 * p2/100)
                          ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:15) 
-- CODE:
q1 = int(input("quantidade inicial de pergaminhos:"))
q2 = int(input("quantidade inicial de varinhas:"))
p1 = float(input("percentual 1:"))
p2 = float(input("percentual 2:"))

cont = 0

while(q1 + q2 < 80000):
	q1 = q1 + (q1 * p1/100)
	q2 = q2 + (q2 * p2/100)
	cont = cont + 1
print(cont)
     
-- EXECUTION TIME:
0.237932
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:
183
-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
30
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:43:08) 
-- CODE:
q1 = int(input("quantidade inicial de pergaminhos:"))
q2 = int(input("quantidade inicial de varinhas:"))
p1 = float(input("percentual 1:"))
p2 = float(input("percentual 2:"))

cont = 0

while(q1 + q2 < 80000):
	q1 = q1 + (q1 * p1/100)
	q2 = q2 + (q2 * p2/100)
	cont = cont + 1
print(cont)
     
-- OUTPUT:
183
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
